add pre commit hook

--- a/notebooks/01-exploration.ipynb
+++ b/notebooks/01-exploration.ipynb
@@ -52,7 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "irecord_df[[\"preferred_taxon\", \"default_common_name\", \"taxon_group\", \"order_taxon\", \"record_status\"]].describe()"
+    "irecord_df[\n",
+    "    [\n",
+    "        \"preferred_taxon\",\n",
+    "        \"default_common_name\",\n",
+    "        \"taxon_group\",\n",
+    "        \"order_taxon\",\n",
+    "        \"record_status\",\n",
+    "    ]\n",
+    "].describe()"
    ]
   },
   {
@@ -73,7 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "irecord_df[[\"preferred_taxon\", \"default_common_name\", \"taxon_group\", \"order_taxon\", \"record_status\"]].describe()"
+    "irecord_df[\n",
+    "    [\n",
+    "        \"preferred_taxon\",\n",
+    "        \"default_common_name\",\n",
+    "        \"taxon_group\",\n",
+    "        \"order_taxon\",\n",
+    "        \"record_status\",\n",
+    "    ]\n",
+    "].describe()"
    ]
   },
   {
@@ -131,7 +147,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_images_irecord = Counter({k: v for k, v in {p.name: len(list(p.iterdir())) for p in folder_path_irecord.iterdir() if p.is_dir()}.items() if v > 0})\n",
+    "num_images_irecord = Counter(\n",
+    "    {\n",
+    "        k: v\n",
+    "        for k, v in {\n",
+    "            p.name: len(list(p.iterdir()))\n",
+    "            for p in folder_path_irecord.iterdir()\n",
+    "            if p.is_dir()\n",
+    "        }.items()\n",
+    "        if v > 0\n",
+    "    }\n",
+    ")\n",
     "num_images_irecord.most_common(10)"
    ]
   },
@@ -175,10 +201,10 @@
     "# Takes long\n",
     "resolutions_irecord = []\n",
     "for class_path in folder_path_irecord.iterdir():\n",
-    "    \n",
+    "\n",
     "    if not class_path.is_dir():\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "    for image_path in class_path.iterdir():\n",
     "        try:\n",
     "            img = Image.open(image_path)\n",
@@ -235,7 +261,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_images_telmee = Counter({p.name: len(list(p.iterdir())) for p in folder_path_telmee.iterdir()})\n",
+    "num_images_telmee = Counter(\n",
+    "    {p.name: len(list(p.iterdir())) for p in folder_path_telmee.iterdir()}\n",
+    ")\n",
     "num_images_telmee.most_common(10)"
    ]
   },
@@ -345,7 +373,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(classes_irecord), len(classes_telmee), len(classes_irecord | classes_telmee), len(classes_irecord & classes_telmee), len(classes_irecord - classes_telmee),  len(classes_telmee - classes_irecord)"
+    "len(classes_irecord), len(classes_telmee), len(classes_irecord | classes_telmee), len(\n",
+    "    classes_irecord & classes_telmee\n",
+    "), len(classes_irecord - classes_telmee), len(classes_telmee - classes_irecord)"
    ]
   },
   {
