--- a/notebooks/02-explore-images.ipynb
+++ b/notebooks/02-explore-images.ipynb
@@ -55,7 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = [Image.open(random_path(random_path(folder_paths_irecord))) for _ in range(100)]\n",
+    "images = [\n",
+    "    Image.open(random_path(random_path(folder_paths_irecord))) for _ in range(100)\n",
+    "]\n",
     "ipyplot.plot_images(images, max_images=100)"
    ]
   },
