--- a/notebooks/03-data-augmentation.ipynb
+++ b/notebooks/03-data-augmentation.ipynb
@@ -16,8 +16,16 @@
     "import numpy as np\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision.transforms.autoaugment import AutoAugmentPolicy\n",
-    "from torchvision.transforms import Compose, \\\n",
-    "    CenterCrop, RandomCrop, ToTensor, Resize, FiveCrop, AutoAugment, TrivialAugmentWide\n",
+    "from torchvision.transforms import (\n",
+    "    Compose,\n",
+    "    CenterCrop,\n",
+    "    RandomCrop,\n",
+    "    ToTensor,\n",
+    "    Resize,\n",
+    "    FiveCrop,\n",
+    "    AutoAugment,\n",
+    "    TrivialAugmentWide,\n",
+    ")\n",
     "\n",
     "from moths.datasets import LabelHierarchyImageFolder\n",
     "from moths.label_hierarchy import label_hierarchy_from_file\n",
@@ -36,12 +44,9 @@
    },
    "outputs": [],
    "source": [
-    "tfs = Compose([\n",
-    "    TrivialAugmentWide(),\n",
-    "    Resize(224),\n",
-    "    RandomCrop(224, pad_if_needed=True),\n",
-    "    ToTensor()\n",
-    "])\n",
+    "tfs = Compose(\n",
+    "    [TrivialAugmentWide(), Resize(224), RandomCrop(224, pad_if_needed=True), ToTensor()]\n",
+    ")\n",
     "\n",
     "# tfs = Compose([\n",
     "#     FiveCrop(224),\n",
