run black and isort

--- a/notebooks/04-class-distribution.ipynb
+++ b/notebooks/04-class-distribution.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_tree = defaultdict(lambda: defaultdict(lambda: defaultdict( lambda: dict())))"
+    "label_tree = defaultdict(lambda: defaultdict(lambda: defaultdict(lambda: dict())))"
    ]
   },
   {
@@ -109,14 +109,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_tree['Other']['Other']['Other']['Other'] = 0\n",
+    "label_tree[\"Other\"][\"Other\"][\"Other\"][\"Other\"] = 0\n",
     "for klass, count in class_counts.items():\n",
-    "    \n",
+    "\n",
     "    if klass in label_hierarchy.name_map:\n",
     "        group, family, genus = label_hierarchy.name_map[klass]\n",
     "        label_tree[group][family][genus][klass] = count\n",
     "    else:\n",
-    "        label_tree['Other']['Other']['Other']['Other'] +=  count"
+    "        label_tree[\"Other\"][\"Other\"][\"Other\"][\"Other\"] += count"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "        else:\n",
     "            for child in _node.values():\n",
     "                _node_species_dict(child, _out)\n",
-    "        \n",
+    "\n",
     "    out = {}\n",
     "    _node_species_dict(node, out)\n",
     "    return out"
@@ -178,12 +178,14 @@
    "source": [
     "def sort_dict_other_last(counts):\n",
     "    has_other = \"Other\" in counts\n",
-    "    \n",
+    "\n",
     "    if has_other:\n",
     "        other_count = counts[\"Other\"]\n",
     "        del counts[\"Other\"]\n",
-    "    \n",
-    "    count_list = sorted([(k, c) for k, c in counts.items()], key=lambda t: t[1], reverse=True)\n",
+    "\n",
+    "    count_list = sorted(\n",
+    "        [(k, c) for k, c in counts.items()], key=lambda t: t[1], reverse=True\n",
+    "    )\n",
     "\n",
     "    if has_other:\n",
     "        count_list.append((\"Other\", other_count))\n",
@@ -207,7 +209,7 @@
    "outputs": [],
    "source": [
     "def plot_count_list(count_list):\n",
-    "    plt.figure(figsize = (15,8))\n",
+    "    plt.figure(figsize=(15, 8))\n",
     "    ax = sns.barplot(x=[t[0] for t in count_list], y=[t[1] for t in count_list])\n",
     "    plt.xticks(rotation=90)"
    ]
@@ -227,7 +229,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noctuidae_classes = {c: class_counts[c] for c, (_, f, _) in label_hierarchy.name_map.items() if f == \"Noctuidae\"}"
+    "noctuidae_classes = {\n",
+    "    c: class_counts[c]\n",
+    "    for c, (_, f, _) in label_hierarchy.name_map.items()\n",
+    "    if f == \"Noctuidae\"\n",
+    "}"
    ]
   },
   {
@@ -237,14 +243,16 @@
    "outputs": [],
    "source": [
     "def plot_count_dict(count_dict):\n",
-    "    count_list = sorted([(k, c) for k, c in count_dict.items()], key=lambda t: t[1], reverse=True)\n",
+    "    count_list = sorted(\n",
+    "        [(k, c) for k, c in count_dict.items()], key=lambda t: t[1], reverse=True\n",
+    "    )\n",
     "    other_list = [(i, k, c) for i, (k, c) in enumerate(count_list) if k == \"Other\"]\n",
     "    if len(other_list) > 0:\n",
     "        ix, kx, cx = other_list[0]\n",
     "        count_list.pop(ix)\n",
     "        count_list.append((kx, cx))\n",
     "\n",
-    "    plt.figure(figsize = (15,8))\n",
+    "    plt.figure(figsize=(15, 8))\n",
     "    ax = sns.barplot(x=[t[0] for t in count_list], y=[t[1] for t in count_list])\n",
     "    plt.xticks(rotation=90)"
    ]
@@ -282,7 +290,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group_dicts = {group: (node_leaf_sum(group_dict), len(node_species_dict(group_dict))) for group, group_dict in label_tree.items()}\n",
+    "group_dicts = {\n",
+    "    group: (node_leaf_sum(group_dict), len(node_species_dict(group_dict)))\n",
+    "    for group, group_dict in label_tree.items()\n",
+    "}\n",
     "\n",
     "sort_dict_other_last(group_dicts)"
    ]
@@ -293,8 +304,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "family_dicts = {family: family_dict for group_dict in label_tree.values() for family, family_dict in group_dict.items()}\n",
-    "family_dicts = {family: (len(node_species_dict(family_dict)), node_leaf_sum(family_dict)) for family, family_dict in family_dicts.items()}\n",
+    "family_dicts = {\n",
+    "    family: family_dict\n",
+    "    for group_dict in label_tree.values()\n",
+    "    for family, family_dict in group_dict.items()\n",
+    "}\n",
+    "family_dicts = {\n",
+    "    family: (len(node_species_dict(family_dict)), node_leaf_sum(family_dict))\n",
+    "    for family, family_dict in family_dicts.items()\n",
+    "}\n",
     "\n",
     "sort_dict_other_last(family_dicts)"
    ]
@@ -305,8 +323,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genus_dicts = {genus: genus_dict for group_dict in label_tree.values() for family_dict in group_dict.values() for genus, genus_dict in family_dict.items()}\n",
-    "genus_dicts = {genus: (node_leaf_sum(genus_dict), len(node_species_dict(genus_dict))) for genus, genus_dict in genus_dicts.items()}\n",
+    "genus_dicts = {\n",
+    "    genus: genus_dict\n",
+    "    for group_dict in label_tree.values()\n",
+    "    for family_dict in group_dict.values()\n",
+    "    for genus, genus_dict in family_dict.items()\n",
+    "}\n",
+    "genus_dicts = {\n",
+    "    genus: (node_leaf_sum(genus_dict), len(node_species_dict(genus_dict)))\n",
+    "    for genus, genus_dict in genus_dicts.items()\n",
+    "}\n",
     "\n",
     "sort_dict_other_last(genus_dicts)"
    ]
